--- a/.github/workflows/run-mac-atomics.yml
+++ b/.github/workflows/run-mac-atomics.yml
@@ -26,4 +26,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: logs.csv
-          path: /tmp
+          path: /tmp/logs.csv
